# sandbox

./: README  TODO  git-all.sh  more-to-explore.md
clojure-utils/: README  bootstrap-maven.sh  build.xml  clojutura.clj  pom.xml
clojure-utils/bloom-dedupe/: README.textile  gen-phone-file.rb
clojure-utils/kburton-clojure-utils/: build.xml  pom.xml
clojure-utils/quartz-clojure-adapter/: README.textile  pom.xml
conferences/2017-SCNA-Day2/: README.md  life  life.ibc  life.idr  live.js
del.icio.us/: README
dev-setup/: .gitignore  Bakefile  README.md  README.textile  bootstrap.sh  brew.packages  erl.out.txt  packages.ubuntu  setup
erlang/: build.sh
examples/c++/c++-crash-course/Project1/: .gitignore  Bakefile  CMakeLists.txt  Project1.sln  cpp-crash-course.sln  gtest_tests.cc
examples/c++/c++-crash-course/Project1/Project1/: .gitignore  Project1.vcxproj  Project1.vcxproj.filters  ch03.cpp  ch04.cpp  ch05.cpp  ch06.cpp  ch08.cpp  ch08.h  ch08FibonacciIterator.cpp  ch08FibonacciRange.cpp  ch09.cpp  ch10.cpp  ch10.hpp  ex1.cpp  ex2.cpp
examples/rust/reqwest-sandbox/: Cargo.toml
examples/rust/reqwest-sandbox/src/: main.rs
gimp/: clean-whiteboard-photo.scm
install-you-a-clojure-for-a-great-good/: README.md  TASKS
openbox/: README.textile  Rakefile
perfortress/: .gitignore  Bakefile  CHANGELOG.md  README.md  TODO  project.clj
rabbitmq/: README.textile  Rakefile  haproxy.sh  rabbit1.sh  rabbit2.sh
rc-files/: .krb-bash-functions  install.sh
recipes/: hot-sauce.txt
redis/: .gitignore  Rakefile  redis.el
ruby/rmagick/: x.sh  (+4 more)
selenium/: repl  run-selenium-rc.sh  slime-incl.el
simplemigrate/: Bakefile  TODO  mysql.sh
talks/: README.textile
(+1500 files in other folders)
